kubernetes/base_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          # TODO decide on amount and type of probes
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli ping | grep PONG
            initialDelaySeconds: 25
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli ping | grep PONG
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: "0.05"
              memory: "128Mi"
            requests:
              cpu: "0.01"
              memory: "64Mi"

--- # TODO get flower api working for info throughout manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
spec:
  selector:
    matchLabels:
      app: flower
  replicas: 1
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower
          image: mher/flower
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: "0.03"
              memory: "128Mi"
            requests:
              cpu: "0.01"
              memory: "64Mi"
#          readinessProbe: # TODO fix this
#            httpGet:
#              path: /
#              port: 8888
#            initialDelaySeconds: 5
#            periodSeconds: 10
#          livenessProbe:  # TODO enable flower API and use elsewhere for worker status
#            httpGet:
#              path: /
#              port: 8888
#            initialDelaySeconds: 10
#            periodSeconds: 20

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
spec:
  selector:
    matchLabels:
      app: fast-api
  replicas: 1
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
        - name: fast-api
          image: dockerman2322/fast-api:amd64  # TODO clearly define CORS once testing done
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-file-input-pv
              mountPath: /input
          ports:
            - name: fast-api
              containerPort: 8000
          resources:
            limits:
              cpu: "0.10"
              memory: "400Mi"
            requests:
              cpu: "0.05"
              memory: "300Mi"
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: shared-file-input-pv
          persistentVolumeClaim:
            claimName: shared-file-input-pvc
