kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
spec:
  type: NodePort
  selector:
    app: fast-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 32767
