kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Works. TODO refactor and add multi-domain capability
    nginx.ingress.kubernetes.io/rewrite-target: $request_uri
#    nginx.ingress.kubernetes.io/rewrite-target: $1$2

spec:
  rules:
    - host: josh-martin.dev
      http:
        paths:
          - path: /api(/.*|$)
            pathType: Prefix
            backend:
              service:
                name: fast-api-service
                port:
                      name: http
          # TODO secure docs
          - path: /docs(/.*|$)
            pathType: Prefix
            backend:
              service:
                name: fast-api-service
                port:
                      name: http
